--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -32,7 +32,7 @@ env:
   DIY_P2_SH: diy-part2.sh
   GEN_INDEX_SH: generate-index.sh
   UPLOAD_BIN_DIR: true
-  DEPLOY_TO_PAGES: false
+  DEPLOY_TO_PAGES: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
@@ -309,7 +309,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-    if: github.env.UPLOAD_BIN_DIR == 'true' && github.env.DEPLOY_TO_PAGES == 'true'
     permissions:
       pages: write
       id-token: write
@@ -319,6 +318,7 @@ jobs:
     
     steps:
     - name: Deploy to GitHub Pages
+      if: env.UPLOAD_BIN_DIR == 'true' && env.DEPLOY_TO_PAGES == 'true'
       id: deployment
       uses: actions/deploy-pages@v4
       with:
