--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -190,14 +190,6 @@ jobs:
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-
-    - name: Generate index.html
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true' && env.DEPLOY_TO_PAGES == 'true' && !cancelled()
-      run: |
-        chmod +x $GEN_INDEX_SH
-        mv $GEN_INDEX_SH $GITHUB_WORKSPACE/immortalwrt/
-        cd $GITHUB_WORKSPACE/immortalwrt/
-        ./$GEN_INDEX_SH
         
     - name: Check space usage
       if: (!cancelled())
@@ -317,9 +309,22 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: ImmortalWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: site
+
+    - name: Generate index.html
+      run: |
+        chmod +x $GEN_INDEX_SH
+        mv $GEN_INDEX_SH site/
+        cd site
+        ./$GEN_INDEX_SH
+
     - name: Deploy to GitHub Pages
       if: env.UPLOAD_BIN_DIR == 'true' && env.DEPLOY_TO_PAGES == 'true'
       id: deployment
       uses: actions/deploy-pages@v4
       with:
-        artifact_name: ImmortalWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
+        path: site
