--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -300,7 +300,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: build
+    if: github.env.UPLOAD_BIN_DIR == 'true' && github.env.DEPLOY_TO_PAGES == 'true'
     permissions:
       pages: write
       id-token: write
@@ -322,9 +323,11 @@ jobs:
         cd site
         ./$GEN_INDEX_SH
 
-    - name: Deploy to GitHub Pages
-      if: env.UPLOAD_BIN_DIR == 'true' && env.DEPLOY_TO_PAGES == 'true'
-      id: deployment
-      uses: actions/deploy-pages@v4
+    - name: Upload pages artifact
+      uses: actions/upload-pages-artifact@v3
       with:
         path: site
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
